# advanced-memory-mcp

./: .dockerignore  .dxtignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCED_MEMORY_VISION.md  ETHICAL_CONTRIBUTION_GUIDE.md  MIGRATION_PLAN.md  Makefile  PRD-1.0.0.md  README.md  SECURITY.md  SPEED_READING_REPOSITORIES.md  docker-compose.yml  justfile  llms-install.md  manifest.json  memory.json  pyproject.toml  pyproject.toml.bak  smithery.yaml  test_all_portmanteau_tools.py  test_canvas.canvas  test_fastmcp.py  test_search.py
.claude/commands/: test-live.md
.github/: CODEOWNERS  EMAIL_SETTINGS.md  FUNDING.yml  RELEASE_TEMPLATE.md  SECURITY.md  TOPICS.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility_issue.md  config.yml  feature_request.md  installation_issue.md  performance_issue.md  question.md
.github/PULL_REQUEST_TEMPLATE/: feature_pr.md  pull_request_template.md
.github/workflows/: beta-testing.yml  ci.yml  dependency-updates.yml  pr-validation.yml  release.yml  security-scan.yml  security.yml
.trash/: 20251004_154010_c7e9d9ba_DeleteTest.md  20251004_154127_80267c49_TestEntity.md  20251004_162542_2eb9ec3e_Test_Note.md  20251004_195513_80dc6a80_TestEntity.md
docs/: AI Assistant Guide for Basic Memory MCP .md  Docker.md  ENHANCED-COMPONENTS-GUIDE.md  GLAMA_AI_CRITICISM_ANALYSIS.md  GLAMA_AI_PLATFORM.md  GLAMA_AI_RESCAN_GUIDE.md  GOLD_STATUS_ACHIEVEMENT.md  REPOSITORY-ASSESSMENT-2025.md  advanced-memory-and-claude.md  archive-migration-guide.md  database-structure.md  docsify-plugin-enhancement-guide.md  enhancement-ideas.md  evernote-integration-plan.md  file-filtering-changes.md  knowledge-operations-guide.md  mermaid-diagrams.md  mermaid-integration-plan.md  node-modules-filter-implementation.md  notepadpp-integration-guide.md  notion-integration-plan.md  pandoc-integration-guide.md  pdf-book-creation-guide.md  research-orchestrator-extensive-guide.md  research-orchestrator-guide.md  typora-automation-via-plugins.md  typora-integration-guide.md
dxt/: .dxtignore
dxt/prompts/: examples.md  quick-start.md
dxt/server/: main.py  requirements.txt
prompts/: advanced-memory-guide.md  troubleshooting.md
scripts/: release.py
server/: README.md  main.py  requirements.txt
src/advanced_memory/: __init__.py  config.py  db.py  deps.py  file_utils.py  install_wizard.py  logging_utils.py  permalink_utils.py  tag_utils.py
src/basic_memory/: __init__.py  config.py  db.py  deps.py  file_utils.py  types.py  utils.py
test-int/: conftest.py
test-int/mcp/: test_build_context_validation.py  test_delete_note_integration.py  test_edit_note_integration.py  test_list_directory_integration.py  test_move_note_integration.py  test_project_management_integration.py  test_project_state_sync_integration.py  test_read_content_integration.py  test_read_note_integration.py  test_search_integration.py  test_write_note_integration.py
test_joplin_export/: Project_Planning_1731545600000.json  Project_Planning_1731545600000.md
test_joplin_export/Meeting Notes/: Weekly_Standup_1731632000000.json  Weekly_Standup_1731632000000.md
test_obsidian_vault/: Home.md  Ideas.md  Project Alpha.md
test_obsidian_vault/Meeting Notes/: 2024-01-15.md
tests/: __init__.py  conftest.py  test_ci_basic.py  test_config.py  test_db_migration_deduplication.py
tests/api/: conftest.py  test_async_client.py  test_continue_conversation_template.py  test_directory_router.py  test_importer_router.py  test_knowledge_router.py  test_management_router.py  test_memory_router.py  test_project_router.py  test_project_router_operations.py  test_prompt_router.py  test_resource_router.py  test_search_router.py  test_search_template.py  test_template_loader.py  test_template_loader_helpers.py
tests/cli/: conftest.py  test_cli_tools.py  test_import_chatgpt.py  test_import_claude_conversations.py  test_import_claude_projects.py  test_import_memory_json.py  test_project_commands.py  test_project_info.py  test_status.py  test_sync.py  test_version.py
tests/importers/: test_importer_base.py  test_importer_utils.py
tests/markdown/: test_entity_parser.py  test_markdown_plugins.py  test_markdown_processor.py  test_observation_edge_cases.py  test_parser_edge_cases.py  test_relation_edge_cases.py  test_task_detection.py
tests/mcp/: conftest.py  test_portmanteau_tools.py  test_prompts.py  test_resource_project_info.py  test_resources.py  test_tool_build_context.py  test_tool_canvas.py  test_tool_delete_note.py  (+13 more)
(+317 files in other folders)
